// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Runner#run rejects if the logger rejects: task logger 1`] = `
{
  "log": [MockFunction] {
    "calls": [
      [
        {
          "measures": {
            "callIndex": 1,
            "result": "result-task1",
          },
          "task": {
            "callIndex": 0,
            "id": "task1",
          },
        },
        {
          "id": "task1",
        },
      ],
      [
        {
          "measures": {
            "callIndex": 3,
            "result": "result-task2",
          },
          "task": {
            "callIndex": 2,
            "id": "task2",
          },
        },
        {
          "id": "task2",
        },
      ],
    ],
    "results": [
      {
        "type": "return",
        "value": Promise {},
      },
      {
        "type": "return",
        "value": Promise {},
      },
    ],
  },
}
`;

exports[`Runner#run rejects if the logger rejects: throwing logger 1`] = `
[MockFunction] {
  "calls": [
    [
      {
        "callIndex": 0,
        "id": "task1",
      },
    ],
    [
      {
        "callIndex": 2,
        "id": "task2",
      },
    ],
  ],
  "results": [
    {
      "type": "return",
      "value": Promise {},
    },
    {
      "type": "return",
      "value": Promise {},
    },
  ],
}
`;

exports[`Runner#run rejects if the taskIterator rejects: task logger 1`] = `
{
  "log": [MockFunction] {
    "calls": [
      [
        {
          "measures": {
            "callIndex": 0,
            "result": "result-task1",
          },
          "task": {
            "id": "task1",
          },
        },
        {
          "id": "task1",
        },
      ],
      [
        {
          "measures": {
            "callIndex": 2,
            "result": "result-task2",
          },
          "task": {
            "id": "task2",
          },
        },
        {
          "id": "task2",
        },
      ],
    ],
    "results": [
      {
        "type": "return",
        "value": Promise {},
      },
      {
        "type": "return",
        "value": Promise {},
      },
    ],
  },
}
`;

exports[`Runner#run rejects if the taskIterator rejects: throwing task iterator 1`] = `
[MockFunction] {
  "calls": [
    [
      {
        "id": "task1",
      },
    ],
    [
      {
        "id": "task2",
      },
    ],
  ],
  "results": [
    {
      "type": "return",
      "value": Promise {},
    },
    {
      "type": "return",
      "value": Promise {},
    },
  ],
}
`;

exports[`Runner#run rejects if the taskManager rejects: task logger 1`] = `
{
  "log": [MockFunction] {
    "calls": [
      [
        {
          "measures": "result-task1",
          "task": {
            "callIndex": 0,
            "id": "task1",
          },
        },
        {
          "id": "task1",
        },
      ],
    ],
    "results": [
      {
        "type": "return",
        "value": Promise {},
      },
    ],
  },
}
`;

exports[`Runner#run rejects if the taskManager rejects: throwing run task 1`] = `
[MockFunction] {
  "calls": [
    [
      {
        "callIndex": 0,
        "id": "task1",
      },
    ],
    [
      {
        "callIndex": 2,
        "id": "task2",
      },
    ],
  ],
  "results": [
    {
      "type": "return",
      "value": Promise {},
    },
    {
      "type": "return",
      "value": Promise {},
    },
  ],
}
`;
